syntax = "proto3";
import "response.proto";
package YrcfAgent;
option go_package = "proto/;yrcf";
// add qos
message AddQosRequest {
    uint64 rbps = 1;
    uint64 wbps = 2;
    uint64 riops = 3;
    uint64 wiops = 4;
    uint64 tbps = 5;
    uint64 tiops = 6;
    uint64 mops = 7;
    string path = 8;
}
message AddQosResponse {
    ResMes result = 1;
}

// list qos
message ListQosRequest {
    string path = 1;
    bool prefix = 2;
}
message QosInfo {
    string eid = 1;
    uint64 rbps = 2;
    uint64 wbps = 3;
    uint64 riops = 4;
    uint64 wiops = 5;
    uint64 tbps = 6;
    uint64 tiops = 7;
    uint64 mops = 8;
    string path = 9;
}
message ListQosResponse {
    ResMes result = 1;
    repeated QosInfo qos_info_list = 2;
}

// delete qos
message DeleteQosRequest {
    string path = 1;
    bool recursive = 2;
    bool force = 3;
}
message DeleteQosResponse {
    ResMes result = 1;
}


service Qos {
    rpc AddQos(AddQosRequest) returns (AddQosResponse) {}
    rpc DeleteQos(DeleteQosRequest) returns (DeleteQosResponse) {}
    rpc ListQos(ListQosRequest) returns (ListQosResponse) {}
}

